@@ -9,13 +9,14 @@ import io.jsonwebtoken.SignatureAlgorithm;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.Set;
+
 import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +24,7 @@ public class TokenService {
 
     private static final String TOKEN_PREFIX = "Bearer ";
 
-    private final UsuarioService usuarioService;
+    private static final String KEY_CARGOS = "cargos";
 
     @Value("${jwt.secret}")
     private String secret;
@@ -34,16 +35,14 @@ public class TokenService {
     public String getToken(UsuarioEntity usuario){
         final Date now = new Date();
         final Date exp = new Date(now.getTime() + Long.parseLong(expiration));
-        List<String> cargos = usuario.getCargos()
-                .stream()
-                .map(c-> c.getNome()
-                        .getTipoCargo())
-                .collect(Collectors.toList());
+        List<String> cargos = usuario.getCargos().stream()
+                                .map(c -> c.getNome().getRole())
+                                .toList();
 
         String token =  Jwts.builder()
                 .setIssuer("vemser-api")
                 .claim(Claims.ID, usuario.getIdUsuario())
-                .claim("cargo", cargos )
+                .claim(KEY_CARGOS, cargos)
                 .setIssuedAt(now)
                 .setExpiration(exp)
                 .signWith(SignatureAlgorithm.HS256, secret)
@@ -63,10 +62,15 @@ public class TokenService {
         Integer idUsuario = body.get(Claims.ID, Integer.class);
 
         if(idUsuario != null){
+            List<String> cargos = body.get(KEY_CARGOS, List.class);
+            System.out.println(cargos);
+            List<SimpleGrantedAuthority> cargosGrantedAuthority = cargos.stream()
+                    .map(cargo -> new SimpleGrantedAuthority(cargo))
+                    .toList();
             return new UsernamePasswordAuthenticationToken(
                     idUsuario,
                     null,
-                    Collections.emptyList()
+                    cargosGrantedAuthority
             );
         }
         return null;
